2008-09-30  Colin Leroy  <colin@colino.net>

	* packages/packages.current: Update Claws, vcalendar and rssyl.

2008-09-30  Werner Koch  <wk@g10code.com>

	* src/uninst-scute.nsi, src/inst-scute.nsi: Fix DLL name.  Always
	install Scute.

2008-09-29  Werner Koch  <wk@g10code.com>

	* patches/gnupg2/02-p12-hack.patch: Remove. 
	* patches/gnupg2/03-argv-quote-fix.patch: Remove. 

	* packages/packages.current: Update GnuPG.

2008-09-29  Colin Leroy  <colin@colino.net>

	* packages/packages.current: Update Claws and VCalendar (bugfixes).

2008-09-29  Marcus Brinkmann  <marcus@g10code.com>

	* src/uninst-cairo.nsi, src/uninst-pthreads-w32.nsi: Remove
	$INSTDIR.

2008-09-28  Colin Leroy  <colin@colino.net>

	* packages/packages.current: Update RSSyl Claws plugin.

2008-09-28  Colin Leroy  <colin@colino.net>

	* configure.ac,
	src/Makefile.am,
	include/config.nsi.in,
	src/inst-sections.nsi,
	packages/packages.current: Add RSSyl Claws plugin.
	* src/inst-rssyl.nsi, src/uninst-rssyl.nsi,
	New files for RSSyl.

2008-09-27  Colin Leroy  <colin@colino.net>

	* configure.ac,
	src/Makefile.am,
	include/config.nsi.in,
	src/inst-sections.nsi,
	packages/packages.current: Add libxml2 for Claws plugins.
	* src/inst-libxml2.nsi, src/uninst-libxml2.nsi,
	New files for libxml2.

2008-09-27  Colin Leroy  <colin@colino.net>

	* packages/packages.current: Update claws (fixes its build).

2008-09-27  Colin Leroy  <colin@colino.net>

	* configure.ac,
	src/Makefile.am,
	include/config.nsi.in,
	src/gpg4win.nsi,
	src/inst-sections.nsi,
	packages/packages.current: Add Curl, Claws plugins Gtkhtml,
	Vcalendar and Notification.
	* src/inst-curl.nsi, src/uninst-curl.nsi,
	src/inst-gtkhtml2_viewer.nsi, src/uninst-gtkhtml2_viewer.nsi,
	src/inst-vcalendar.nsi, src/uninst-vcalendar.nsi,
	src/inst-notifiation_plugin.nsi, src/uninst-notification_plugin.nsi:
	New files for these new packages

2008-09-25  Colin Leroy  <colin@colino.net>

	* src/Makefile.am (gpg4win_pkg_claws_mail_configure): Add