@@ -156,6 +156,10 @@
 !define gpg4win_pkg_rssyl @gpg4win_pkg_rssyl@
 !define gpg4win_pkg_rssyl_version @gpg4win_pkg_rssyl_version@
 
+@HAVE_PKG_TNEF_PARSE@
+!define gpg4win_pkg_tnef_parse @gpg4win_pkg_tnef_parse@
+!define gpg4win_pkg_tnef_parse_version @gpg4win_pkg_tnef_parse_version@
+
 #@HAVE_PKG_EUDORAGPG@
 #!define gpg4win_pkg_eudoragpg @gpg4win_pkg_eudoragpg@
 #!define gpg4win_pkg_eudoragpg_version @gpg4win_pkg_eudoragpg_version@
